# hyprstatus

./: .gitignore  CMakeLists.txt  DESIGN.md  LICENSE  README.md  hyprpm.toml
.github/workflows/: build.yml
example/: hyprstatus.conf  pyprland.toml
src/: globals.hpp  main.cpp
src/config/: ModuleConfig.cpp  ModuleConfig.hpp
src/core/: Bar.cpp  Bar.hpp  BarManager.cpp  BarManager.hpp
src/modules/: Battery.cpp  Clock.cpp  Cpu.cpp  Custom.cpp  Factories.hpp  Language.cpp  Memory.cpp  Module.cpp  Module.hpp  Modules.cpp  Network.cpp  Notifications.cpp  PowerProfiles.cpp  Pulse.cpp  Submap.cpp  Temperature.cpp  Tray.cpp  Window.cpp  Workspaces.cpp
src/render/: BarPassElement.cpp  BarPassElement.hpp  Markup.cpp  Markup.hpp  TextCache.cpp  TextCache.hpp
src/services/: DBus.cpp  DBus.hpp  Exec.cpp  Exec.hpp  MainThread.cpp  MainThread.hpp  Signals.cpp  Signals.hpp
src/util/: Format.cpp  Format.hpp  HyprCompat.hpp  Json.cpp  Json.hpp
